--- a/dev/sass/blocks/portfolio.sass
+++ b/dev/sass/blocks/portfolio.sass
@@ -31,17 +31,17 @@ $block: ".portfolio"
 
   // $Portfolio section title
   &__title
-    font-size: 28px
+    font-size: 40px
     font-weight: normal
     margin-bottom: 10px
 
 
   // $Portfolio section description
   &__descr
-    font-size: 14px
+    font-size: 18px
     font-weight: normal
     margin-bottom: 40px
-
+    text-align: justify
 
   // $Portfolio section filter
   &__filter
