updated content and design

--- a/dev/pug/pages/index.pug
+++ b/dev/pug/pages/index.pug
@@ -13,9 +13,9 @@ block body-content
   header.page-header.js-header
     .page-header__inner
       .page-header__logo
-        h1 IJCAI 2022
+        h1 Tutorial
         | &nbsp;
-        span Tutorial: Differentiable Optimization
+        span Differentiable Optimization
       nav.page-header__nav.js-nav
         ul
           li
@@ -54,64 +54,6 @@ block body-content
 
 
 
-      h2.portfolio__title Related Materials
-      nav.portfolio__filter
-        ul
-          li.portfolio__filter-btn.is-selected.js-filter(data-filter='all') All
-          li.portfolio__filter-btn.js-filter(data-filter='web') Web design
-          li.portfolio__filter-btn.js-filter(data-filter='graphic') Graphic design
-          li.portfolio__filter-btn.js-filter(data-filter='flat') Flat design
-      ul.portfolio__content
-        li.portfolio__item.js-item(data-cat='all flat')
-          a(href='#')
-            img.portfolio__item-img.js-lazy(src='static/images/port1.png', alt='')
-            .portfolio__item-caption
-              span.portfolio__item-title Example title
-              span.portfolio__item-cat Flat design
-        li.portfolio__item.js-item(data-cat='all web')
-          a(href='#')
-            img.portfolio__item-img.js-lazy(src='static/images/port2.png', alt='')
-            .portfolio__item-caption
-              span.portfolio__item-title Example title
-              span.portfolio__item-cat Web design
-        li.portfolio__item.js-item(data-cat='all graphic')
-          a(href='#')
-            img.portfolio__item-img.js-lazy(src='static/images/port3.png', alt='')
-            .portfolio__item-caption
-              span.portfolio__item-title Example title
-              span.portfolio__item-cat Graphic design
-        li.portfolio__item.js-item(data-cat='all graphic web')
-          a(href='#')
-            img.portfolio__item-img.js-lazy(src='static/images/port4.png', alt='')
-            .portfolio__item-caption
-              span.portfolio__item-title Example title
-              span.portfolio__item-cat Graphic design
-        li.portfolio__item.js-item(data-cat='all graphic flat')
-          a(href='#')
-            img.portfolio__item-img.js-lazy(src='static/images/port6.png', alt='')
-            .portfolio__item-caption
-              span.portfolio__item-title Example title
-              span.portfolio__item-cat Flat design
-        li.portfolio__item.js-item(data-cat='all web')
-          a(href='#')
-            img.portfolio__item-img.js-lazy(src='static/images/port5.png', alt='')
-            .portfolio__item-caption
-              span.portfolio__item-title Example title
-              span.portfolio__item-cat Web design
-        li.portfolio__item.js-item(data-cat='all flat web')
-          a(href='#')
-            img.portfolio__item-img.js-lazy(src='static/images/port1.png', alt='')
-            .portfolio__item-caption
-              span.portfolio__item-title Example title
-              span.portfolio__item-cat Flat design
-        li.portfolio__item.js-item(data-cat='all web')
-          a(href='#')
-            img.portfolio__item-img.js-lazy(src='static/images/port2.png', alt='')
-            .portfolio__item-caption
-              span.portfolio__item-title Example title
-              span.portfolio__item-cat Web design
-
-
   // $Team section
   section#team.team
     .team__inner
@@ -122,42 +64,42 @@ block body-content
           h3.team__member-name Kai Wang
           span.team__member-role Harvard University
           p.team__member-descr
-            | I am a 5th-year Ph.D. in Computer Science at Harvard University focusing on differentiable optimization and machine learning.
+            | I am a Ph.D. candidate studying Computer Science at Harvard University working with Professor Milind Tambe. My research focuses on using artificial intelligence to resolve various social challenges, including wildlife conservation and healthcare challenges. I formulate these social challenges as multi-agent systems and learn the unknown information from data using machine learning. I apply and generalize a new learning algorithm, decision-focused learning, to integrate the domain knowledge from social challenges into machine learning pipelines. 
         ul.team__member-soc
           li
             a.team__member-icon.tw(href='https://twitter.com/kaiwang_gua') Follow me on twitter
           li
             a.team__member-icon.gplus(href='https://scholar.google.com/citations?user=gGSsQmsAAAAJ&hl=en') My Google+
           li
-            a.team__member-icon.db(href='#') I am on Dribble
+            a.team__member-icon.db(href='https://guaguakai.github.io/') Personal website
       .team__member
-        img(src='static/images/andrew.jpg', alt='Andrew Perrault')
+        img(src='static/images/andrew.png', alt='Andrew Perrault')
         .team__member-info
           h3.team__member-name Andrew Perrault
           span.team__member-role The Ohio State University
           p.team__member-descr
-            | I am an assistant professor in the Department of Computer Science and Engineering at The Ohio State University.
+            | I am an assistant professor in the Department of Computer Science and Engineering at The Ohio State University. My research focuses on multi-agent interactions that arise in combating societal challenges, especially in the areas of conservation and public health. These interactions often involve challenges of uncertainty in the environment and the utility functions of the agents, necessitating approaches that handle scarce data. To achieve this end, I combine methodologies from game theory and multi-agent systems with machine learning, robust planning and optimization techniques.
         ul.team__member-soc
           li
             a.team__member-icon.tw(href='https://twitter.com/PerraultAndrew') Follow me on twitter
           li
             a.team__member-icon.gplus(href='https://scholar.google.com/citations?user=2eWscBQAAAAJ&hl=en&oi=ao') My Google+
           li
-            a.team__member-icon.db(href='#') I am on Dribble
+            a.team__member-icon.db(href='https://aperrault.github.io/') Personal website
       .team__member
         img(src='static/images/brandon.png', alt='Brandon Amos')
         .team__member-info
           h3.team__member-name Brandon Amos
           span.team__member-role Facebook AI (FAIR)
           p.team__member-descr
-            | I am a research scientist at Facebook AI (FAIR) in NYC and study foundational topics in machine learning and optimization.
+            | I am a research scientist at Facebook AI (FAIR) in NYC and study foundational topics in machine learning and optimization, recently involving reinforcement learning, control, optimal transport, and geometry. My research is on learning systems that understand and interact with our world and focuses on integrating structural information and domain knowledge into these systems to represent non-trivial reasoning operations. A key theme of my work in this space involves the use of optimization as a differentiable building block in larger architectures that are end-to-end learned. 
         ul.team__member-soc
           li
             a.team__member-icon.tw(href='https://twitter.com/brandondamos') Follow me on twitter
           li
             a.team__member-icon.gplus(href='https://scholar.google.com/citations?user=d8gdZR4AAAAJ') My Google+
           li
-            a.team__member-icon.db(href='#') I am on Dribble
+            a.team__member-icon.db(href='http://bamos.github.io/') Personal website
 
 
   // $Contact section
