--- a/dev/sass/blocks/page-footer.sass
+++ b/dev/sass/blocks/page-footer.sass
@@ -15,7 +15,7 @@ $block: ".page-footer"
   width: 100%
   min-height: 85px
   padding-bottom: 30px
-  background-color: #2d3e50
+  background-color: #634B2A
 
   @media screen and (max-width: 480px)
     padding: 0 10px 30px
@@ -50,7 +50,7 @@ $block: ".page-footer"
     font-size: 0
     text-align: center
     overflow: hidden
-    background-color: #1bbc9b
+    background-color: #AB8B6B
     color: transparent
     transition: all .5s
 
