--- a/dev/sass/blocks/page-header.sass
+++ b/dev/sass/blocks/page-header.sass
@@ -44,7 +44,7 @@ $block: ".page-header"
     height: 50px
     margin: 25px 0 0 40px
     padding: 5px 0 0 65px
-    background: url("../images/logo.jpg") 0 center no-repeat
+    background: url("../images/ijcai.png") 0 center no-repeat
 
     @media screen and (max-width: 800px)
       margin: 25px 0 0 10px
@@ -61,6 +61,7 @@ $block: ".page-header"
       font-size: 20px
       font-weight: bold
       text-transform: uppercase
+      margin: 0 70px
 
       @media screen and (max-width: 640px)
         display: none
@@ -71,6 +72,7 @@ $block: ".page-header"
     & span
       font-size: 14px
       text-transform: capitalize
+      margin: 0 70px
 
       @media screen and (max-width: 640px)
         display: none
@@ -118,5 +120,5 @@ $block: ".page-header"
     // $Page header navigation link STATE: active state
     &:hover,
     &.is-active
-      background-color: #1bbc9b
+      background-color: #CCA475
       color: #fff
