--- a/dev/sass/blocks/promo.sass
+++ b/dev/sass/blocks/promo.sass
@@ -13,9 +13,9 @@ $block: ".promo"
 
 #{$block}
   width: 100%
-  min-height: 455px
+  min-height: 300px
   padding: 70px 0
-  background: #323232 url("../images/promo-bg.jpg") center 0 no-repeat
+  background: #323232 url("../images/vienna.png") center 0 no-repeat
   background-attachment: fixed
   background-size: cover
   text-align: center
@@ -32,7 +32,7 @@ $block: ".promo"
   // $Promo section title
   &__title
     margin-bottom: 35px
-    font-size: 50px
+    font-size: 36px
     text-transform: capitalize
 
     & span
