--- a/dev/sass/blocks/team.sass
+++ b/dev/sass/blocks/team.sass
@@ -15,7 +15,7 @@ $block: ".team"
   width: 100%
   min-height: 645px
   padding-top: 55px
-  background-color: #16a086
+  background-color: #AB8B6B
   text-align: center
 
   @media screen and (max-width: 640px)
@@ -50,7 +50,8 @@ $block: ".team"
   &__member
     display: inline-block
     position: relative
-    width: 220px
+    vertical-align: top
+    width: 250px
     margin: 0 30px 30px
     background-color: #fff
 
@@ -75,7 +76,7 @@ $block: ".team"
   &__member-info
     display: block
     width: 100%
-    height: 190px
+    height: 460px
     padding: 15px 10px
 
     @media screen and (max-width: 640px)
