updated date and location

--- a/dev/pug/pages/index.pug
+++ b/dev/pug/pages/index.pug
@@ -35,7 +35,8 @@ block body-content
     h2.promo__title
       |
       span Differentiable Optimization: Integrating Structural Information into Training Pipeline
-      span July 25th 14:00-17:30 T29 @ Lehar 1
+    h2.promo__subtitle
+      span July 25th 14:00-17:30 @ T29 Lehar 1
 
     a.promo__go-next.js-anchor(href='#portfolio') Scroll down
 
