--- a/dev/sass/blocks/promo.sass
+++ b/dev/sass/blocks/promo.sass
@@ -38,6 +38,13 @@ $block: ".promo"
     & span
       font-weight: bold
 
+  &__subtitle
+    margin-bottom: 19px
+    font-size: 20px
+    text-transform: capitalize
+
+    & span
+      font-weight: bold
 
   // $Promo section description
   &__descr
